tests/expected_package_import_file_local_missing.diag.out
<input3>:3:5: error: cross-module reference 'pkg_import_value_support::id' requires a matching import
        pkg_import_value_support::id(value)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
